instrument 4 inca o sectiune

--- a/src/templates/4_UZ_ChildDI_Material_Resources_en.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_en.html
@@ -189,6 +189,283 @@
                 </div>
             </div>
         </div>
+
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. LOCATION AND ACCESSIBILITY</h2>
+
+        <p class="mt-6">LA1 Does the institution have any of the following in its immediate vicinity (within a 3 to 7 minutes walk of its boundaries)?…</p>
+
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">a. Residential buildings</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1a-1" type="radio" value="1" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1a-2" type="radio" value="2" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">b. Commercial and service spaces</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1b-1" type="radio" value="1" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1b-2" type="radio" value="2" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">c. Public services (school, hospital, town hall, police, etc.)</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1c-1" type="radio" value="1" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1c-2" type="radio" value="2" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">d. Other social services with accommodation, regardless of the category of beneficiaries</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1d-1" type="radio" value="1" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1d-2" type="radio" value="2" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">e. Industrial spaces, warehouses</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1e-1" type="radio" value="1" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1e-2" type="radio" value="2" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">f. Agricultural land</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1f-1" type="radio" value="1" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1f-2" type="radio" value="2" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="mt-6">LA2. What is the distance from the institution to the nearest…?</p>
+        <p class="my-2 italic text-sm">Please provide the distance in kilometers</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">a. Food store / supermarket / food market</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2a" name="la2a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">b. Bus / minibus stop</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2b" name="la2b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">c. Train station / stop</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2c" name="la2c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">d. Post office</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2d" name="la2d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">e. Bank</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2e" name="la2e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">f. Park</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2f" name="la2f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">g. Kindergarten</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2g" name="la2g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">h. School</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2h" name="la2h" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">i. Police station</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2i" name="la2i" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">j. Hospital</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2j" name="la2j" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">k. Family clinic</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2k" name="la2k" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">l. Healthcare facility that provides habilitation / rehabilitation activities</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2l" name="la2l" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">m. Town hall </div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2m" name="la2m" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">n. Court</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2n" name="la2n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA3. Is the access road to the center passable in bad weather conditions?</div>
+            <div class="col-span-1 flex gap-4">
+                <div class="flex items-center">
+                    <input id="la3-1" type="radio" value="1" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la3-2" type="radio" value="2" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-2" class="ms-2 text-sm text-gray-900">2. No</label>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA4. How often does the most easily accessible public transportation (the stop closest to the institution) run during the day?</div>
+            <div class="col-span-1 flex flex-col gap-2">
+                <div class="flex items-center">
+                    <input id="la4-1" type="radio" value="1" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-1" class="ms-2 text-sm text-gray-900">1. Once every half hour or more often</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-2" type="radio" value="2" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-2" class="ms-2 text-sm text-gray-900">2. Once every hour</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-3" type="radio" value="3" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-3" class="ms-2 text-sm text-gray-900">3. Once every 2-3 hours</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-4" type="radio" value="4" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-4" class="ms-2 text-sm text-gray-900">4. There are at least 2 trips per day, but they come less often than once every 3 hours</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-5" type="radio" value="5" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-5" class="ms-2 text-sm text-gray-900">5. There are no trips at all</label>
+                </div>
+            </div>
+        </div>
+
+        <p class="italic uppercase text-gray-400 mt-6">FOR INSTITUTIONS IN RURAL AREAS</p>
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA5. How far is the institution from the nearest urban area?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la5" name="la5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>km</span>
+            </div>
+        </div>
+        <p class="italic text-gray-400 text-sm">Please provide the distance in kilometers</p>
+
+        <p class="mt-6">LA6. How many vehicles of the following types does the institution have?</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">a. Cars</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6a" name="la6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>vehicles</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">b. Vans, minibuses, or other passenger vehicles with more than 8 seats</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6b" name="la6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>vehicles</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA7. How many of these passenger vehicles are adapted for persons with mobility impairments?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la7" name="la7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>vehicles</span>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA8. How many of these passenger vehicles are used to transport the children residing in the institution?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la8" name="la8" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>vehicles</span>
+            </div>
+        </div>
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. LAND, BUILDINGS AND FACILITIES</h2>
+
+
+
+
     </form>
 </body>
 
