--- a/src/templates/4_UZ_ChildDI_Material_Resources_ru.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_ru.html
@@ -189,6 +189,283 @@
                 </div>
             </div>
         </div>
+
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. РАСПОЛОЖЕНИЕ И ДОСТУПНОСТЬ</h2>
+
+        <p class="mt-6">LA1 Имеет ли учреждение в непосредственной близости (в пределах 3-7 минут ходьбы от его границ) что-либо из перечисленного? …</p>
+
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">а. Жилые дома</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1a-1" type="radio" value="1" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1a-2" type="radio" value="2" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">б. Коммерческие и сервисные помещения</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1b-1" type="radio" value="1" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1b-2" type="radio" value="2" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">в. Общественные службы (школа, больница, мэрия здание хокимията, полицейский участок и т.д.)</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1c-1" type="radio" value="1" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1c-2" type="radio" value="2" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">д. Прочие здания социального назначения  услуги с проживанием независимо от категории получателей</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1d-1" type="radio" value="1" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1d-2" type="radio" value="2" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">е. Промышленные помещения, склады</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1e-1" type="radio" value="1" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1e-2" type="radio" value="2" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">ф. Сельскохозяйственная земля </div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1f-1" type="radio" value="1" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1f-2" type="radio" value="2" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="mt-6">LA2. Каково расстояние от учреждения до ближайшего…?</p>
+        <p class="my-2 italic text-sm">Укажите расстояние в километрах</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">а. Продовольственный магазин/супермаркет/продуктовый рынок</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2a" name="la2a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">б. Остановка автобуса/маршрутки</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2b" name="la2b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">в. Железнодорожный вокзал/остановка</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2c" name="la2c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">д. Почтовое отделение</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2d" name="la2d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">е. Банк</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2e" name="la2e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">ф. Парк</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2f" name="la2f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">г. Детский сад</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2g" name="la2g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">h. Школа</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2h" name="la2h" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">я. Полицейский участок</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2i" name="la2i" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">j. Больница</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2j" name="la2j" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">k. Семейная поликлиника</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2k" name="la2k" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">l. Медицинское учреждение, осуществляющее абилитационную/ реабилитационную деятельность</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2l" name="la2l" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">m. Хокимиат</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2m" name="la2m" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">н. Здание cуда</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2n" name="la2n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>км</span>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA3. Можно ли проехать  к центру в плохих погодных условиях?</div>
+            <div class="col-span-1 flex gap-4">
+                <div class="flex items-center">
+                    <input id="la3-1" type="radio" value="1" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-1" class="ms-2 text-sm text-gray-900">1. Да</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la3-2" type="radio" value="2" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-2" class="ms-2 text-sm text-gray-900">2. Нет</label>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA4. Как часто в течение дня ходит самый наиболее доступный общественный транспорт (ближайшая к учреждению остановка)?</div>
+            <div class="col-span-1 flex flex-col gap-2">
+                <div class="flex items-center">
+                    <input id="la4-1" type="radio" value="1" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-1" class="ms-2 text-sm text-gray-900">1. Раз в полчаса или чаще</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-2" type="radio" value="2" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-2" class="ms-2 text-sm text-gray-900">2. Раз в час</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-3" type="radio" value="3" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-3" class="ms-2 text-sm text-gray-900">3. Раз в 2-3 часа</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-4" type="radio" value="4" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-4" class="ms-2 text-sm text-gray-900">4. В день есть минимум 2 рейса, но они бывают реже, чем раз в 3 часа</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-5" type="radio" value="5" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-5" class="ms-2 text-sm text-gray-900">5. Рейсов нет вообще</label>
+                </div>
+            </div>
+        </div>
+
+        <p class="italic uppercase text-gray-400 mt-6">ДЛЯ УЧРЕЖДЕНИЙ В СЕЛЬСКОЙ МЕСТНОСТИ</p>
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA5. Как далеко находится учреждение от ближайшего городского поселения?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la5" name="la5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>км</span>
+            </div>
+        </div>
+        <p class="italic text-gray-400 text-sm">Укажите расстояние в километрах</p>
+
+        <p class="mt-6">LA6. Сколько транспортных средств следующих типов имеется в учреждении?</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">а. Легковые автомобили</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6a" name="la6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>транспортные средства</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">б. Фургоны, микроавтобусы и другие пассажирские транспортные средства с числом мест более 8</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6b" name="la6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>транспортные средства</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA7. Сколько из этих пассажирских транспортных средств приспособлено для людей с ограниченными возможностями передвижения?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la7" name="la7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>транспортные средства</span>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA8. Сколько таких легковых автомобилей используется для перевозки детей, проживающих в учреждении?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la8" name="la8" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>транспортные средства</span>
+            </div>
+        </div>
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. ЗЕМЛЯ, ЗДАНИЯ И СООРУЖЕНИЯ</h2>
+
+
+
+
     </form>
 </body>
 
