--- a/src/templates/4_UZ_ChildDI_Material_Resources_uz.html
+++ b/src/templates/4_UZ_ChildDI_Material_Resources_uz.html
@@ -189,6 +189,283 @@
                 </div>
             </div>
         </div>
+
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. JOYI VA BORISH QULAYLIGI</h2>
+
+        <p class="mt-6">LA1 Muassasaning yon atrofida (3-7 daqiqalik piyoda masofada) quyidagilardan birortasi bormi?…</p>
+
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">a. Turar-joy binolari</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1a-1" type="radio" value="1" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1a-2" type="radio" value="2" name="la1a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1a-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">b. Savdo va xizmat ko&#39;rsatish joylari</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1b-1" type="radio" value="1" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1b-2" type="radio" value="2" name="la1b" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1b-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">c. Davlat xizmatlari (maktab, shifoxona, hokimiyat, politsiya va boshqalar)</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1c-1" type="radio" value="1" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1c-2" type="radio" value="2" name="la1c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1c-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">d. Foydalanuvchilar/Benifisiyarlar toifasidan qat&#39;i nazar, turar joy bilan ta&#39;minlangan boshqa ijtimoiy xizmatlar</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1d-1" type="radio" value="1" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1d-2" type="radio" value="2" name="la1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1d-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">e. Sanoat maydonlari, omborlar</div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1e-1" type="radio" value="1" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1e-2" type="radio" value="2" name="la1e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1e-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">f. Qishloq xo&#39;jaligi yerlari </div>
+                <div class="col-span-1 flex gap-4">
+                    <div class="flex items-center">
+                        <input id="la1f-1" type="radio" value="1" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="la1f-2" type="radio" value="2" name="la1f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="la1f-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <p class="mt-6">LA2. Muassasadan quyidagilarning eng yaqingacha bo&#39;lgan masofa qancha...?</p>
+        <p class="my-2 italic text-sm">Iltimos, masofani kilometrlarda ko&#39;rsating</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">a. Oziq-ovqat do&#39;koni / supermarket / oziq-ovqat bozori</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2a" name="la2a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">b. Avtobus / mikroavtobus bekati</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2b" name="la2b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">c. Poyezd vokzali / bekati</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2c" name="la2c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">d. Pochta bo&#39;limi</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2d" name="la2d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">e. Bank</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2e" name="la2e" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">f. Park</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2f" name="la2f" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">g. Bolalar bog&#39;chasi</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2g" name="la2g" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">h. Maktab</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2h" name="la2h" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">i. Politsiya mahkamasi</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2i" name="la2i" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">j. Shifoxona</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2j" name="la2j" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">k. Oilaviy poliklinika</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2k" name="la2k" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">l. Abilitatsiya / reabilitatsiya tadbirlarini ta&#39;minlaydigan sog&#39;liqni saqlash muassasasi</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2l" name="la2l" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">m. Hokimiyat</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2m" name="la2m" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="col-span-1">n. Sud</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la2n" name="la2n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>km</span>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA3. Yomon ob-havo sharoitida markazga borish yo&#39;li yaroqlimi?</div>
+            <div class="col-span-1 flex gap-4">
+                <div class="flex items-center">
+                    <input id="la3-1" type="radio" value="1" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la3-2" type="radio" value="2" name="la3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la3-2" class="ms-2 text-sm text-gray-900">2. Yo&#39;q</label>
+                </div>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="col-span-1">LA4. Eng qulay jamoat transporti (muassasa yaqinidagi bekatdan) kun davomida qanchalik tez qatnaydi?</div>
+            <div class="col-span-1 flex flex-col gap-2">
+                <div class="flex items-center">
+                    <input id="la4-1" type="radio" value="1" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-1" class="ms-2 text-sm text-gray-900">1. Har yarim soatda bir yoki undan tezroq</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-2" type="radio" value="2" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-2" class="ms-2 text-sm text-gray-900">2. Har soatda bir marta</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-3" type="radio" value="3" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-3" class="ms-2 text-sm text-gray-900">3. Har 2-3 soatda bir marta</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-4" type="radio" value="4" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-4" class="ms-2 text-sm text-gray-900">4. Kuniga kamida 2 ta reys bor, lekin ular har 3 soatda bir martadan kamroq keladi</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="la4-5" type="radio" value="5" name="la4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="la4-5" class="ms-2 text-sm text-gray-900">5. Hech qanday reyslar yo&#39;q</label>
+                </div>
+            </div>
+        </div>
+
+        <p class="italic uppercase text-gray-400 mt-6">QISHLOQ JOYLARDAGI MUASSASALAR UCHUN</p>
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA5. Muassasa eng yaqin shahar hududidan qancha masofada joylashgan?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la5" name="la5" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>km</span>
+            </div>
+        </div>
+        <p class="italic text-gray-400 text-sm">Iltimos, masofani kilometrlarda ko&#39;rsating</p>
+
+        <p class="mt-6">LA6. Muassasa quyidagi turdagi nechta avtomashinaga ega?</p>
+        <div class="ml-4">
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">a. Yengil avtomobillar</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6a" name="la6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>transport vositalari</span>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-2">
+                <div class="col-span-1">b. Furgonlar, mikroavtobuslar yoki 8 dan ortiq o&#39;rindiqli boshqa yo&#39;lovchi transport vositalari</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <input type="text" id="la6b" name="la6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                    <span>transport vositalari</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA7. Ushbu yo&#39;lovchi tashish vositalarining qanchasi harakatlanishi cheklangan shaxslar uchun moslashtirilgan?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la7" name="la7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>transport vositalari</span>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-2">
+            <div class="col-span-1">LA8. Muassasada yashovchi bolalarni tashish uchun ushbu yo&#39;lovchi transport vositalaridan nechtasi foydalaniladi?</div>
+            <div class="col-span-1 flex items-center gap-4">
+                <input type="text" id="la8" name="la8" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <span>transport vositalari</span>
+            </div>
+        </div>
+
+        <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. YER, BINO VA INSHOOTLAR</h2>
+
+
+
+
     </form>
 </body>
 
